--- a/src/FantasyFootball.Maui/Views/TeamsPage.xaml
+++ b/src/FantasyFootball.Maui/Views/TeamsPage.xaml
@@ -10,6 +10,9 @@
   <ContentPage.Behaviors>
     <!--  xct:EventToCommandBehavior Command="{Binding LoadTeamsCommand}" EventName="Appearing" /  -->
   </ContentPage.Behaviors>
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Command="{Binding AddNewTeamCommand}" IconImageSource="{x:StaticResource NewIcon}" />
+  </ContentPage.ToolbarItems>
   <StackLayout>
     <ActivityIndicator IsEnabled="{Binding IsBusy}" IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
     <Picker
@@ -36,17 +39,7 @@
               <Label Grid.Column="0" VerticalOptions="Center" Text="{Binding Rank}" />
               <Image Grid.Column="1" Source="{Binding Team.Logo, FallbackValue='question_mark'}" />
               <Label Grid.Column="2" VerticalOptions="Center" Text="{Binding Team.Name}" />
-              <Entry
-                Grid.Column="3"
-                VerticalOptions="Center"
-                HorizontalTextAlignment="Center"
-                IsEnabled="True"
-                Keyboard="Numeric"
-                Text="{Binding EloString}">
-                <Entry.Behaviors>
-                  <xct:EventToCommandBehavior Command="{Binding SaveEloChangeCommand}" EventName="Unfocused" />
-                </Entry.Behaviors>
-              </Entry>
+              <Label Grid.Column="3" VerticalOptions="Center" Text="{Binding Team.Elo}" />
             </Grid>
             <!--  Separator  -->
             <BoxView HeightRequest="1" VerticalOptions="End" Color="LightGray" />
